tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_do_not_infer_globals_to_u32_from_type_use/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Globals must have a specified type
  ┌─ src/main.nr:2:16
  │
2 │         global ARRAY_LEN = 3;
  │                ---------   - Inferred type is `Field`
  │

error: Globals must have a specified type
  ┌─ src/main.nr:3:16
  │
3 │         global STR_LEN: _ = 2;
  │                -------      - Inferred type is `Field`
  │

error: Globals must have a specified type
  ┌─ src/main.nr:4:16
  │
4 │         global FMT_STR_LEN = 2;
  │                -----------   - Inferred type is `Field`
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:7:21
  │
7 │             let _a: [u32; ARRAY_LEN] = [1, 2, 3];
  │                     ---------------- expected `u32`, found `Field`
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:8:25
  │
8 │             let _b: str<STR_LEN> = "hi";
  │                         ------- expected `u32`, found `Field`
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:9:28
  │
9 │             let _c: fmtstr<FMT_STR_LEN, _> = f"hi";
  │                            ----------- expected `u32`, found `Field`
  │

Aborting due to 6 previous errors
